--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
           "docs",
           "package.json"
         ],
-        "message": "Release: ${nextRelease.version}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     "publish": [
