--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "assets": [
           "dist/**/*.{js,css}",
           "docs",
-          "package.json"
+          "package.json",
+          "CHANGELOG.md"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes} :)"
       }
